--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-rich==13.9.2
-beautifulsoup4==4.12.3
-requests==2.32.3
-fake_useragent==1.5.1
-httpx==0.27.2
+rich>=13.9.2
+beautifulsoup4>=4.12.3
+requests>=2.32.3
+fake_useragent>=1.5.1
+httpx>=0.27.2
+halo >= 0.0.31
